# ZTerm

./: CMakeLists.txt  README.md  msbuild
curl/: CMakeLists.txt
doc/: Chromium.md  MinTTY.md  PuttyIntegration.md  PuttyWindow.md  README.md  WebView2.md  WiTTY.md  billing.md  kb.md  kw_pg.txt  msterminal.md  pcre2.md  pterm.md  regex_benchmark.c  s.pl  scintilladoc.txt  secp256k1.md  w1.cpp  w2.cpp  zterm.md  ztermenc.md
inc/: DefaultSettings.h  HostAndPropsheetIncludes.h  HostSignals.hpp  LibraryIncludes.h  TestUtils.h  WilErrorReporting.h  conattrs.hpp  conint.h  conpty-static.h  consoletaeftemplates.hpp  cpl_core.h  winrtTaefTemplates.hpp
msterm/: ControlCore.h  HwndTerminal.cpp  HwndTerminal.hpp  NonClientIslandWindow.cpp  WindowEmperor.cpp  WindowsTerminal.rc  bitmap.h  patch.md  patch_zh.md  pch.h  zterm.cpp  zterm.h
pcre2/: CMakeLists.txt
putty/: CMakeLists.txt  puttymem.h  settings.c
render/: CMakeLists.txt
scintilla/: CMakeLists.txt
secp256k1/: CMakeLists.txt
term/: CMakeLists.txt  DbcsAttribute.hpp  ImageSlice.hpp  LineRendition.hpp  Marks.hpp  OutputCell.hpp  OutputCellIterator.hpp  OutputCellRect.hpp  OutputCellView.hpp  Row.hpp  TextAttribute.hpp  TextColor.h  UTextAdapter.h  cursor.cpp  cursor.h  pch.h  precomp.h  search.h  textBuffer.hpp  textBufferCellIterator.hpp  textBufferTextIterator.hpp
win/: App.cpp  App.h  App.rc  CMakeLists.txt  Config.cpp  Config.h  MainFrm.h  NetWork.cpp  NetWork.h  Network.cpp  Network.h  PuTTY.cpp  PuTTY.hpp  Render.cpp  Render.h  Settings.cpp  Settings.h  Terminal.cpp  Terminal.h  View.h  ViewChat.h  ViewEdit.h  ViewGPT.h  ViewTTY.h  ViewTab.h  WinDlg.h  XBitmap.h  XTabCtl.h  ZTerm.cpp  ZTerm.exe.manifest  ZTerm.h  ZTerm.rc  pch.cpp  pch.h  resource.h  stdafx.h  til.h
wt/: CMakeLists.txt
(+100 files in other folders)
